Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-54964

[Android]: When using the holo theme the copyright text will not be visible on the map

    XMLWordPrintable

Details

    • Icc8832124cd64d5326e0aa7540e3287c4325d31d

    Description

      [Android]: When using the holo theme the copyright text will not be visible on the map. This is because the background of the image being used for drawing the text is always white. But if the application's palette uses white for the text then it will end up being white on white and thus not visible.

      Attachments

        For Gerrit Dashboard: QTBUG-54964
        # Subject Branch Project Status CR V

        Activity

          People

            paangele Paolo Angelelli
            andysh Andy Shaw
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes