Fix for invisible copyright notice with Holo theme on android

The copyright notice is currently rendered using the default application
palette.
This patch forces the text and link colors to black and blue, since
the notice is always shown on top of the map and other colors may not
work.

Task-number: QTBUG-54964
Change-Id: Icc8832124cd64d5326e0aa7540e3287c4325d31d
Reviewed-by: Paul Olav Tvete <paul.tvete@qt.io>
Reviewed-by: Johan Helsing <johan.helsing@qt.io>
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>